Change logo and start to style navbar

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -12,6 +12,10 @@ $black: #2b2523
 
 .navbar .navbar-menu
   box-shadow:none !important
+  min-height: 6rem;
+
+.navbar-brand .navbar-item img
+  max-height: 100%;
 
 .content .taglist
   list-style: none
