--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -88,6 +88,9 @@ footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
 
+footer .menu-list a
+  color: #333;
+
 //Menu overrides
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
