--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,11 +2,11 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+$cofound-blue: #091637
+$cofound-blue-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $cofound-blue
+$primary-invert: $cofound-blue-invert
 $body-color: #333
 $black: #2b2523
 
@@ -84,20 +84,21 @@ $black: #2b2523
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
+
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
 
-footer .menu-list a
+footer .menu-list
   color: #333;
 
 //Menu overrides
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $cofound-blue-invert
+$menu-item-active-background-color:	$cofound-blue-invert
+$menu-list-border-left: 1px solid $cofound-blue-invert
 $menu-label-color: $white-ter
 
 
@@ -129,9 +130,7 @@ $menu-label-color: $white-ter
   flex-basis: 35%;
   margin: 0 1.5em 0 0;
 
-
 @import "~bulma"
-
 
 // responsiveness
 +tablet-only
@@ -145,3 +144,19 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+
+
+// Landing Page
+
+section.hero
+  padding: 80px 0;
+
+.hero-brand-element
+  position: absolute;
+  right: 0;
+
+.zero-to-one-element
+  position: absolute;
+
+.hero-brand-element img
+  height: 80vh;
