Imrove our works section and form section

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -89,7 +89,7 @@ footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
 
-footer .menu-list
+footer .menu-list a
   color: #333;
 
 //Menu overrides
@@ -160,3 +160,18 @@ section.hero
 
 .hero-brand-element img
   height: 80vh;
+
+.cofound-card .card-image
+  padding: 48px 48px 0;
+  background: #E2E4EB;
+
+.cofound-card .card-content
+  background: #091637;
+  color: #ffffff;
+  padding: 40px;
+
+.cofound-card .image.is-4by3
+  padding-top: 83%;
+
+.cofound-card .image.is-4by3 img
+  height: auto;
