Add changes in blog-post page

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -203,3 +203,16 @@ section.hero
 
 .cofound-card .image.is-4by3 img
   height: auto;
+
+.cofound-card h2
+  font-weight: 500;
+
+
+.cofound-blog
+  background: $cofound-blue;
+
+.cofound-blog .content
+  color: #A1A4B1;
+
+.cofound-blog .title
+  color: #ffffff;
