Fix footer layout, updated images

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -117,6 +117,12 @@ footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
 
+.footer .content
+  padding: 0 1.5rem;
+
+.footer .cofound-description
+  font-size: 14px;
+
 footer .menu-list a
   color: #333;
 
